--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
 
     //dexter permissions
     implementation "com.karumi:dexter:5.0.0"
